--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,5 @@ License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+URL: https://github.com/DevinMcAfee123/MATH4753oumcaf0005
+BugReports: https://github.com/DevinMcAfee123/MATH4753oumcaf0005/issues
